syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

import "op_type.proto";
import "google/protobuf/wrappers.proto";
import "atomic_badge.proto";

message UpdatePolicyTransaction {
  bytes id = 1;
  bytes sender_public_key = 2;
  bytes policy_id = 3;
  repeated bytes recipients = 4;
  repeated bytes owners = 5;
  OpType op_type = 6;
  int64 timestamp = 7;
  int64 fee = 8;
  google.protobuf.BytesValue fee_asset_id = 9;
  AtomicBadge atomic_badge = 10;
  repeated bytes proofs = 11;
  bytes sender_address = 12;
}